# whats-changed

./: CHANGELOG.md  Cargo.toml  README.md  dylint.toml
.github/workflows/: ci.yml
cases/dep-inserted-mid-list/: after.toml  before.toml  description.txt
cases/dep-removed-mid-list/: after.toml  before.toml  description.txt  stdout.txt
cases/git-dep/: after.toml  description.txt
cases/invalid-dep/: before.toml  description.txt  stderr.txt
cases/multiple-comparators/: before.toml  description.txt  stderr.txt
cases/new-package/: description.txt  stderr.txt
cases/no-args/: description.txt  stderr.txt
cases/no-op/: description.txt
cases/no-tags/: description.txt  stderr.txt
cases/path-dep/: before.toml  description.txt
cases/removed-dep/: description.txt  stdout.txt
cases/two-upgraded/: after.toml  before.toml  description.txt  stdout.txt
cases/unchanged/: description.txt
cases/unexpected-operator/: before.toml  description.txt  stderr.txt
cases/upgraded/: after.toml  description.txt
cases/version-table/: after.toml  before.toml  description.txt
cases/version-to-git/: before.toml  description.txt
cases/workspace-dep/: before.toml  description.txt
cases/workspace-manifest/: after.toml  before.toml  description.txt  stdout.txt
src/: main.rs
tests/: ci.rs  integration.rs
