[package]
name = "whats-changed"
version = "0.1.0"
description = "Show Rust dependencies that were upgraded"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/smoelius/whats-changed"

[dependencies]
anyhow = "1.0"
elaborate = "0.2"
semver = "1.0"
tempfile = "3.24"
toml = "0.9"

[dev-dependencies]
assert_cmd = "2.1"
ctor = "0.6"
